# mycc

./: .gitignore  CMakeLists.txt  buf.c  define.h  dict.c  error.c  map.c  mycc.h  path.c  pp.c  set.c  tokenize.c  util.c  vector.c
collection/: CMakeLists.txt  avltree.c  collection.h
scripts/: play.sh  pre-push
tests/: CMakeLists.txt  test_pp.c  test_pp.txt  test_pp_sample.c  test_pp_sample2.c  test_pp_true.c  test_preprocess.txt  test_preprocess2.txt  test_tokenize.c  test_tokenize.txt  test_util.c  util_test.c
